--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dayjs": "^1.11.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "yallist": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
