--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -14,6 +14,15 @@ jobs:
     permissions:
       contents: read
 
+    env:
+      REMOTE_HOST: ec2-18-199-237-58.eu-central-1.compute.amazonaws.com
+      REMOTE_USER: ubuntu
+      REMOTE_ROOT: /home/ubuntu/heterodox
+      REMOTE_DATA_DIR: /home/ubuntu/heterodox/data
+      REMOTE_BACKUP_DIR: /home/ubuntu/heterodox/backups
+      REMOTE_SERVICE: heterodox
+      REMOTE_PORT: "4000"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,7 +37,6 @@ jobs:
       - name: Build client
         working-directory: client
         env:
-          # Optional: avoid registry flakiness
           NPM_CONFIG_AUDIT: "false"
           NPM_CONFIG_FUND: "false"
         run: |
@@ -39,23 +47,26 @@ jobs:
       - name: Ensure target dirs on VM
         uses: appleboy/ssh-action@v1.2.2
         with:
-          host:     ec2-18-199-237-58.eu-central-1.compute.amazonaws.com
-          username: ubuntu
+          host:     ${{ env.REMOTE_HOST }}
+          username: ${{ env.REMOTE_USER }}
           key:      ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -euo pipefail
-            mkdir -p /home/ubuntu/heterodox/client/dist
-            mkdir -p /home/ubuntu/heterodox/server
+            mkdir -p "$REMOTE_ROOT/client/dist"
+            mkdir -p "$REMOTE_ROOT/server"
+            # Keep DB/file backups OUTSIDE rsync target
+            mkdir -p "$REMOTE_DATA_DIR"
+            mkdir -p "$REMOTE_BACKUP_DIR"
 
       - name: Deploy client build
         uses: easingthemes/ssh-deploy@v5.1.0
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST:      ec2-18-199-237-58.eu-central-1.compute.amazonaws.com
-          REMOTE_USER:      ubuntu
+          REMOTE_HOST:      ${{ env.REMOTE_HOST }}
+          REMOTE_USER:      ${{ env.REMOTE_USER }}
           ARGS:             "-avzr --delete"
           SOURCE:           "client/dist/"
-          TARGET:           "/home/ubuntu/heterodox/client/dist"
+          TARGET:           "${{ env.REMOTE_ROOT }}/client/dist"
 
       # --- OPTIONAL: deploy backend code as well ---
       - name: Deploy server code (optional)
@@ -63,56 +74,76 @@ jobs:
         uses: easingthemes/ssh-deploy@v5.1.0
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST:      ec2-18-199-237-58.eu-central-1.compute.amazonaws.com
-          REMOTE_USER:      ubuntu
+          REMOTE_HOST:      ${{ env.REMOTE_HOST }}
+          REMOTE_USER:      ${{ env.REMOTE_USER }}
+          # Protect secrets/DB on VM; we WANT migrations/ to ship
           ARGS: >-
             -avzr --delete
             --exclude='.git'
             --exclude='node_modules'
             --exclude='.env'
             --exclude='asa.db'
+            --exclude='data/'
           SOURCE:           "server/"
-          TARGET:           "/home/ubuntu/heterodox/server"
+          TARGET:           "${{ env.REMOTE_ROOT }}/server"
 
-      - name: Post-deploy (restart backend if deployed; reload Caddy)
+      - name: Post-deploy (migrate + restart backend if deployed; reload Caddy)
         uses: appleboy/ssh-action@v1.2.2
         with:
-          host:     ec2-18-199-237-58.eu-central-1.compute.amazonaws.com
-          username: ubuntu
+          host:     ${{ env.REMOTE_HOST }}
+          username: ${{ env.REMOTE_USER }}
           key:      ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -euo pipefail
+
+            # If deploying the backend, install deps, run migrations, restart, health check
             if [ "${{ vars.DEPLOY_SERVER }}" = "true" ]; then
-              cd /home/ubuntu/heterodox/server
+              cd "$REMOTE_ROOT/server"
               NODE_ENV=production npm ci --omit=dev --no-audit --no-fund
 
-              # Restart backend
-              sudo systemctl restart heterodox
+              # Ensure DB path and back up if it exists
+              export DB_PATH="${REMOTE_DATA_DIR}/asa.db"
+              mkdir -p "${REMOTE_DATA_DIR}" "${REMOTE_BACKUP_DIR}"
+              if [ -f "$DB_PATH" ]; then
+                ts=$(date -u +%Y%m%d_%H%M%S)
+                cp -a "$DB_PATH" "${REMOTE_BACKUP_DIR}/asa.db.${ts}.sqlite"
+                echo "Backed up DB to ${REMOTE_BACKUP_DIR}/asa.db.${ts}.sqlite"
+              fi
 
-              # Wait up to 60s for :4000 to be listening and responsive
-              ok=0
-              for i in {1..60}; do
-                if sudo ss -ltnp | grep -q ':4000'; then
-                  code=$(curl -s -o /dev/null -w "%{http_code}" --connect-timeout 2 http://127.0.0.1:4000/ || true)
-                  # Accept 200/301/302/401 as "up" (401 expected without session)
-                  if [[ "$code" =~ ^(200|30[12]|401)$ ]]; then
+              # Run migrations (status for logs, then apply)
+              echo "=== Migration status (before) ==="
+              DB_PATH="$DB_PATH" node server/migrate.js --status || true
+              DB_PATH="$DB_PATH" node server/migrate.js
+
+              # Restart service cleanly
+              sudo systemctl restart "${REMOTE_SERVICE}"
+
+              # Wait up to 60s for :${REMOTE_PORT} to be healthy
+              for i in $(seq 1 60); do
+                if sudo ss -ltnp | grep -q ":${REMOTE_PORT}"; then
+                  code=$(curl -s -o /dev/null -w "%{http_code}" --connect-timeout 2 "http://127.0.0.1:${REMOTE_PORT}/" || true)
+                  # 200/301/302/401 are acceptable (401 if no session)
+                  if echo "$code" | grep -Eq '^(200|30[12]|401)$'; then
                     echo "Backend healthy (HTTP $code)"
-                    ok=1
                     break
                   fi
+                fi
+                if [ "$i" -eq 60 ]; then
+                  echo "Backend did not become healthy. Recent logs:"
+                  sudo systemctl status "${REMOTE_SERVICE}" --no-pager || true
+                  sudo journalctl -u "${REMOTE_SERVICE}" -n 200 --no-pager || true
+                  exit 1
                 fi
                 sleep 1
               done
 
-              if [ "$ok" -ne 1 ]; then
-                echo "Backend did not become healthy. Recent logs:"
-                sudo systemctl status heterodox --no-pager || true
-                sudo journalctl -u heterodox -n 200 --no-pager || true
-                exit 1
-              fi
+              echo "=== Migration status (after) ==="
+              DB_PATH="$DB_PATH" node server/migrate.js --status || true
             fi
 
-            # Reload Caddy (harmless if unchanged)
+            # Reload Caddy (harmless if config unchanged)
             sudo systemctl reload caddy || true
-            echo "${{ github.sha }}" | sudo tee /home/ubuntu/heterodox/.deployed_sha >/dev/null
-            date -u | sudo tee /home/ubuntu/heterodox/.deployed_at >/dev/null
+
+            # Stamp deployment info
+            echo "${{ github.sha }}" | sudo tee "${REMOTE_ROOT}/.deployed_sha" >/dev/null
+            date -u | sudo tee "${REMOTE_ROOT}/.deployed_at" >/dev/null
