--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
+    "openai": "^5.16.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
